--- a/charts/management-system/templates/api/service.yaml
+++ b/charts/management-system/templates/api/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "management-system.fullname" . }}
+  name: {{ template "management-system.api" . }}
   labels:
     {{- include "management-system.labels" . | nindent 4 }}
 spec:
@@ -13,6 +13,4 @@ spec:
       name: http
   selector:
     {{- include "management-system.selectorLabels" . | nindent 4 }}
-
-
-
+    component: {{ .Values.api.name }}
