--- a/charts/management-system/templates/api/hpa.yaml
+++ b/charts/management-system/templates/api/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.enabled }}
+{{- if  ((.Values.api.autoscaling).enabled | default .Values.autoscaling.enabled) }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -13,7 +13,7 @@ spec:
     kind: Deployment
     name: {{ template "management-system.api" . }}
   minReplicas: {{ .Values.api.autoscaling.minReplicas | default .Values.autoscaling.minReplicas }}
-  maxReplicas: {{ .Values.api.autoscaling.maxReplicas | default .Values.autoscaling.maxReplicas}}
+  maxReplicas: {{ .Values.api.autoscaling.maxReplicas | default .Values.autoscaling.maxReplicas }}
   metrics:
     {{- if (.Values.api.autoscaling.targetCPUUtilizationPercentage | default .Values.autoscaling.targetCPUUtilizationPercentage) }}
     - type: Resource
