--- a/charts/management-system/templates/api/deployment.yaml
+++ b/charts/management-system/templates/api/deployment.yaml
@@ -7,8 +7,8 @@ metadata:
     component: {{ .Values.api.name }}
     app.kubernetes.io/component: {{ .Values.api.name }}
 spec:
-  {{- if not (.Values.api.autoscaling.enabled | default .Values.autoscaling.enabled)}}
-  replicas: {{ .Values.api.replicaCount | default .Values.replicaCount}}
+  {{- if not ((.Values.api.autoscaling).enabled | default .Values.autoscaling.enabled)}}
+  replicas: {{ (.Values.api.replicaCount) | default .Values.replicaCount}}
   {{- end }}
   selector:
     matchLabels:
@@ -34,11 +34,11 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "management-system.serviceAccountName" . }}
       securityContext:
-        {{- toYaml (.Values.api.podSecurityContext | default .Values.podSecurityContext) | nindent 8 }}
+        {{- toYaml ((.Values.api.podSecurityContext) | default .Values.podSecurityContext) | nindent 8 }}
       containers:
         - name: "{{ .Values.api.name }}"
           securityContext:
-            {{- toYaml (.Values.api.securityContext | default .Values.securityContext) | nindent 12 }}
+            {{- toYaml ((.Values.api.securityContext) | default .Values.securityContext) | nindent 12 }}
           image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.api.image.pullPolicy }}
           ports:
@@ -50,7 +50,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.api.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml (.Values.api.resources | default .Values.resources) | nindent 12 }}
+            {{- toYaml ((.Values.api.resources) | default .Values.resources) | nindent 12 }}
           {{- with .Values.api.volumeMounts }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
@@ -59,15 +59,15 @@ spec:
       volumes:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with (.Values.api.nodeSelector | default .Values.nodeSelector) }}
+      {{- with ((.Values.api.nodeSelector) | default .Values.nodeSelector) }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with (.Values.api.affinity | default .Values.affinity) }}
+      {{- with ((.Values.api.affinity) | default .Values.affinity) }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with (.Values.api.tolerations | default .Values.tolerations) }}
+      {{- with ((.Values.api.tolerations) | default .Values.tolerations) }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
