--- a/charts/management-system/templates/api/hpa.yaml
+++ b/charts/management-system/templates/api/hpa.yaml
@@ -12,23 +12,23 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ template "management-system.api" . }}
-  minReplicas: {{ .Values.api.autoscaling.minReplicas | default .Values.autoscaling.minReplicas }}
-  maxReplicas: {{ .Values.api.autoscaling.maxReplicas | default .Values.autoscaling.maxReplicas }}
+  minReplicas: {{ (.Values.api.autoscaling).minReplicas | default .Values.autoscaling.minReplicas }}
+  maxReplicas: {{ (.Values.api.autoscaling).maxReplicas | default .Values.autoscaling.maxReplicas }}
   metrics:
-    {{- if (.Values.api.autoscaling.targetCPUUtilizationPercentage | default .Values.autoscaling.targetCPUUtilizationPercentage) }}
+    {{- if ((.Values.api.autoscaling).targetCPUUtilizationPercentage | default .Values.autoscaling.targetCPUUtilizationPercentage) }}
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ .Values.api.autoscaling.targetCPUUtilizationPercentage | default .Values.autoscaling.targetCPUUtilizationPercentage}}
+          averageUtilization: {{ (.Values.api.autoscaling).targetCPUUtilizationPercentage | default .Values.autoscaling.targetCPUUtilizationPercentage}}
     {{- end }}
-    {{- if (.Values.api.autoscaling.targetMemoryUtilizationPercentage | default .Values.autoscaling.targetMemoryUtilizationPercentage) }}
+    {{- if ((.Values.api.autoscaling).targetMemoryUtilizationPercentage | default .Values.autoscaling.targetMemoryUtilizationPercentage) }}
     - type: Resource
       resource:
         name: memory
         target:
           type: Utilization
-          averageUtilization: {{ .Values.api.autoscaling.targetMemoryUtilizationPercentage | default .Values.autoscaling.targetMemoryUtilizationPercentage}}
+          averageUtilization: {{ (.Values.api.autoscaling).targetMemoryUtilizationPercentage | default .Values.autoscaling.targetMemoryUtilizationPercentage}}
     {{- end }}
 {{- end }}
