--- a/charts/management-system/templates/api/deployment.yaml
+++ b/charts/management-system/templates/api/deployment.yaml
@@ -45,6 +45,10 @@ spec:
             - name: http
               containerPort: {{ .Values.api.service.port }}
               protocol: TCP
+          {{- with .Values.api.env }}
+          env:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           livenessProbe:
             {{- toYaml .Values.api.livenessProbe | nindent 12 }}
           readinessProbe:
