--- a/charts/management-system/values.yaml
+++ b/charts/management-system/values.yaml
@@ -50,6 +50,36 @@ affinity: {}
 nameOverride: ""
 fullnameOverride: ""
 
+mongodb:
+  auth:
+    enabled: true
+    rootUser: root
+    rootPassword: "CtqcwT2RJV7XaPDALeKgfAR27gtE7fVCL6Ax3fumyLJgzS3Lh3Nffrgz2s"
+    usernames: ["ms"]
+    passwords: ["WNtmL3sVtHep7CSerrd2UbquuPQqmxunJJwS7Ar4oNXCBrAY5ef3BpCz2c"]
+    databases: ["ms"]
+  
+  architecture: replicaset
+  arbiter:
+    enabled: false
+  
+  replicaCount: 2
+  externalAccess:
+    enabled: true
+    service:
+      type: LoadBalancer
+      loadBalancerIPs:
+        - 10.255.37.28
+        - 10.255.37.29
+
+
+rabbitmq:
+  auth:
+    username: "user"
+    password: "uzwHr6vFsBUoLfAtzQKbZnesqcBkxisH"
+    securePassword: true
+
+
 api:
   name: api
   service:
@@ -65,6 +95,11 @@ api:
   podLabels: {}
   podAnnotations: {}
   imagePullSecrets: []
+  env:
+    - name: MONGODB_URL
+      value: "mongodb://ms:WNtmL3sVtHep7CSerrd2UbquuPQqmxunJJwS7Ar4oNXCBrAY5ef3BpCz2c@10.255.37.28:27017,10.255.37.29:27017/ms"
+    - name: RABBITMQ_URL
+      value: "amqp://user:uzwHr6vFsBUoLfAtzQKbZnesqcBkxisH@spawner-rabbitmq/"
 
   livenessProbe:
     httpGet:
