--- a/charts/management-system/templates/api/deployment.yaml
+++ b/charts/management-system/templates/api/deployment.yaml
@@ -49,10 +49,14 @@ spec:
           env:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- with .Values.api.livenessProbe }}
           livenessProbe:
-            {{- toYaml .Values.api.livenessProbe | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.api.readinessProbe }}
           readinessProbe:
-            {{- toYaml .Values.api.readinessProbe | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           resources:
             {{- toYaml ((.Values.api.resources) | default .Values.resources) | nindent 12 }}
           {{- with .Values.api.volumeMounts }}
