--- a/charts/honeynet__/templates/api/deployment.yaml
+++ b/charts/honeynet__/templates/api/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.api.name }}
+  name: {{ template "management-system.api" . }}
   labels:
     {{- include "management-system.labels" . | nindent 4 }}
     component: {{ .Values.api.name }}
