--- a/charts/honeynet__/templates/api/hpa.yaml
+++ b/charts/honeynet__/templates/api/hpa.yaml
@@ -2,7 +2,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Values.api.name }}
+  name: {{ template "management-system.api" . }}
   labels:
     {{- include "management-system.labels" . | nindent 4 }}
     component: {{ .Values.api.name }}
@@ -11,7 +11,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Values.api.name }}
+    name: {{ template "management-system.api" . }}
   minReplicas: {{ (.Values.api.autoscaling).minReplicas | default .Values.autoscaling.minReplicas }}
   maxReplicas: {{ (.Values.api.autoscaling).maxReplicas | default .Values.autoscaling.maxReplicas }}
   metrics:
