--- a/charts/honeynet__/templates/api/service.yaml
+++ b/charts/honeynet__/templates/api/service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.spoa.name }}
+  name: {{ template "management-system.api" . }}
   labels:
     {{- include "management-system.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.spoa.service.type }}
+  type: {{ .Values.api.service.type }}
   ports:
-    - port: {{ .Values.spoa.service.port }}
-      {{- if contains "NodePort" .Values.spoa.service.type }}
-      nodePort: {{ .Values.spoa.service.nodePort }}
+    - port: {{ .Values.api.service.port }}
+      {{- if contains "NodePort" .Values.api.service.type }}
+      nodePort: {{ .Values.api.service.nodePort }}
       {{- end }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
     {{- include "management-system.selectorLabels" . | nindent 4 }}
-    component: {{ .Values.spoa.name }}
+    component: {{ .Values.api.name }}
