--- a/charts/honeynet__/templates/k8sWorker/service.yaml
+++ b/charts/honeynet__/templates/k8sWorker/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.k8sWorker.name }}
+  name: {{ template "management-system.api" . }}
   labels:
     {{- include "management-system.labels" . | nindent 4 }}
 spec:
