--- a/charts/honeynet/values.yaml
+++ b/charts/honeynet/values.yaml
@@ -186,6 +186,8 @@ snapshotter:
     tag: latest
     imagePullPolicy: Always
 
+  containerd_sock_path: "/run/containerd/containerd.sock"
+
   registry:
     url: ""
     project: ""
