--- a/charts/loadbalancer/manifests/logstash/conf.d/logstash.conf
+++ b/charts/loadbalancer/manifests/logstash/conf.d/logstash.conf
@@ -299,7 +299,7 @@ filter {
         }
     }
 
-    if [dest_ip] != "10.255.37.49" {
+    if [dest_ip] != "10.255.37.61" {
             drop {}
     }
 
@@ -323,7 +323,7 @@ filter {
 # Output section
 output {
   elasticsearch {
-    hosts => ["${ES_HOST}:9200"]
+    hosts => ["${ES_HOST}"]
     # With templates now being legacy we need to set the daily index with its template manually. Otherwise a new index might be created with differents settings configured through Kibana.
     index => "logstash-%{+YYYY.MM.dd}"
     template => "/etc/logstash/template.json"
