--- a/charts/emk/values.yaml
+++ b/charts/emk/values.yaml
@@ -1,32 +1,4 @@
-# Default values for emk.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
-
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-podLabels: {}
+replicaCount: 1 # If auto scale disabled
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -38,26 +10,6 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -71,37 +23,143 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
 
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 10
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+nameOverride: ""
+fullnameOverride: ""
+
+
+redis:
+  auth:
+    enabled: false
+
+es:
+  name: "es"
+  image:
+    repository: "docker.elastic.co/elasticsearch/elasticsearch"
+    pullPolicy: Always
+    tag: "8.11.1"
+
+  service:
+    type: NodePort
+    ports:
+      - name: rest
+        port: 9200
+        nodePort: 31920
+      - name: intra
+        port: 9300
+        nodePort: 31930
+
+  storage:
+    size: 50Gi
+
+  resources:
+    requests:
+      cpu: 1000m
+      memory: 1024Mi
+    limits:
+      cpu: 1000m
+      memory: 2048Mi
+
+
+  podLabels: {}
+  podAnnotations: {}
+  imagePullSecrets: []
+
+  livenessProbe: {}
+  readinessProbe: {}
+
+  volumeMounts: []
+  volumes: []
+
+kibana:
+  name: "kibana"
+
+  image:
+    repository: "docker.elastic.co/kibana/kibana"
+    pullPolicy: Always
+    tag: "8.8.0"
+
+  service:
+    type: NodePort
+    ports:
+      - name: web
+        port: 5601
+        nodePort: 31601
+
+  podLabels: {}
+  podAnnotations: {}
+  imagePullSecrets: []
+
+  livenessProbe: {}
+  readinessProbe: {}
+
+  volumeMounts: []
+  volumes: []
+
+map:
+  data:
+    name: "map-data"
+
+    image:
+      repository: ""
+      pullPolicy: Always
+      tag: "latest"
+
+    podLabels: {}
+    podAnnotations: {}
+    imagePullSecrets: []
+
+    livenessProbe: {}
+    readinessProbe: {}
+
+    volumeMounts: []
+    volumes: []
+
+  web:
+    name: "map-web"
+
+    image:
+      repository: ""
+      pullPolicy: Always
+      tag: "latest"
+
+    service:
+      type: NodePort
+      ports:
+        - name: web
+          port: 64299
+          protocol: TCP
+          nodePort: 31299
+
+    podLabels: {}
+    podAnnotations: {}
+    imagePullSecrets: []
+
+    livenessProbe: {}
+    readinessProbe: {}
+
+    volumeMounts: []
+    volumes: []
